RISC-V: Fix PR109228

This patch fix PR109228
https://gcc.gnu.org/bugzilla/show_bug.cgi?id=109228

gcc/ChangeLog:

        * config/riscv/riscv-vector-builtins-bases.cc (class vlenb): Add __riscv_vlenb support.
        (BASE): Ditto.
        * config/riscv/riscv-vector-builtins-bases.h: Ditto.
        * config/riscv/riscv-vector-builtins-functions.def (vlenb): Ditto.
        * config/riscv/riscv-vector-builtins-shapes.cc (struct vlenb_def): Ditto.
        (SHAPE): Ditto.
        * config/riscv/riscv-vector-builtins-shapes.h: Ditto.
        * config/riscv/riscv-vector-builtins.cc: Ditto.

gcc/testsuite/ChangeLog:

        * gcc.target/riscv/rvv/base/vlenb-1.c: New test.